--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "bootstrap": "^4.6.0",
+    "echarts": "^5.0.1",
     "moment": "^2.29.1",
     "node-sass": "^4.14.1",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.3",
+    "react-copy-to-clipboard": "^5.0.3",
     "react-datetime": "^3.0.4",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
