--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "private": true,
   "dependencies": {
     "@babel/core": "7.12.3",
+    "@babel/helper-builder-react-jsx": "^7.12.13",
+    "@babel/helper-builder-react-jsx-experimental": "^7.12.11",
+    "@babel/plugin-syntax-jsx": "^7.12.13",
     "@pmmmwh/react-refresh-webpack-plugin": "0.4.2",
     "@polkadot/api": "^3.10.2",
     "@polkadot/api-contract": "^3.10.2",
@@ -19,6 +22,7 @@
     "babel-jest": "^26.6.0",
     "babel-loader": "8.1.0",
     "babel-plugin-named-asset-import": "^0.3.7",
+    "babel-plugin-syntax-jsx": "^6.18.0",
     "babel-preset-react-app": "^10.0.0",
     "bfj": "^7.0.2",
     "bootstrap": "^4.6.0",
