--- a/package.json
+++ b/package.json
@@ -94,10 +94,18 @@
     "email": "git config user.email srdothunter@gmail.com"
   },
   "eslintConfig": {
+
     "extends": [
       "react-app",
       "react-app/jest"
-    ]
+    ],
+    "rules":{
+      "jsx-a11y/anchor-is-valid":"off",
+      "react-hooks/exhaustive-deps":"off",
+      "no-eval":"off",
+      "no-unused-vars":"off",
+      "import/no-anonymous-default-export":"off"
+    }
   },
   "browserslist": {
     "production": [
