--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "babel-jest": "^26.6.0",
     "babel-loader": "8.1.0",
     "babel-plugin-named-asset-import": "^0.3.7",
+    "babel-plugin-polyfill-corejs2": "^0.2.2",
+    "babel-plugin-polyfill-corejs3": "^0.2.2",
+    "babel-plugin-polyfill-regenerator": "^0.2.2",
     "babel-plugin-syntax-jsx": "^6.18.0",
     "babel-preset-react-app": "^10.0.0",
     "bfj": "^7.0.2",
@@ -53,6 +56,7 @@
     "jest-circus": "26.6.0",
     "jest-resolve": "26.6.0",
     "jest-watch-typeahead": "0.6.1",
+    "jsonfile": "^6.1.0",
     "mini-css-extract-plugin": "0.11.3",
     "moment": "^2.29.1",
     "node-sass": "^4.14.1",
