--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "semver": "7.3.2",
     "slick-carousel": "^1.8.1",
     "style-loader": "1.3.0",
+    "styled-components": "^5.3.1",
     "terser-webpack-plugin": "4.2.3",
     "ts-pnp": "1.2.0",
     "url-loader": "4.1.1",
@@ -179,7 +180,14 @@
   "babel": {
     "presets": [
       "react-app"
-    ]
+    ],
+    "env": {
+      "development": {
+        "plugins": [
+          "babel-plugin-styled-components"
+        ]
+      }
+    }
   },
   "devDependencies": {
     "gh-pages": "^3.1.0"
