--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "@babel/helper-builder-react-jsx": "^7.12.13",
     "@babel/helper-builder-react-jsx-experimental": "^7.12.11",
     "@babel/plugin-syntax-jsx": "^7.12.13",
-    "@geist-ui/react": "^2.2.0",
     "@pmmmwh/react-refresh-webpack-plugin": "0.4.2",
     "@polkadot/api": "^3.11.1",
     "@polkadot/api-contract": "^3.11.1",
@@ -20,9 +19,11 @@
     "@testing-library/user-event": "^12.1.10",
     "@typescript-eslint/eslint-plugin": "^4.5.0",
     "@typescript-eslint/parser": "^4.5.0",
+    "antd": "^4.16.13",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^26.6.0",
     "babel-loader": "8.1.0",
+    "babel-plugin-import": "^1.13.3",
     "babel-plugin-named-asset-import": "^0.3.7",
     "babel-plugin-polyfill-corejs2": "^0.2.2",
     "babel-plugin-polyfill-corejs3": "^0.2.2",
