--- a/package.json
+++ b/package.json
@@ -59,6 +59,8 @@
     "jest-resolve": "26.6.0",
     "jest-watch-typeahead": "0.6.1",
     "jsonfile": "^6.1.0",
+    "less": "^2.7.3",
+    "less-loader": "6",
     "mini-css-extract-plugin": "0.11.3",
     "moment": "^2.29.1",
     "node-sass": "^4.14.1",
